2014-09-03  Myles C. Maxfield  <mmaxfield@apple.com>

        Text caret changes to color of text in Mail and Notes
        https://bugs.webkit.org/show_bug.cgi?id=135904

        Reviewed by Simon Fraser.

        Consult with the background color of spans inside editable divs to determine what color
        the caret should be.

        Test: editing/caret/color-span-inside-editable.html

        * editing/FrameSelection.cpp:
        (WebCore::CaretBase::paintCaret):

2014-09-03  Tim Horton  <timothy_horton@apple.com>

        Fix the iOS build after r173230

        * WebCore.exp.in:

2014-09-03  Myles C. Maxfield  <mmaxfield@apple.com>

        Remove unnecessary function from TextPainter
        https://bugs.webkit.org/show_bug.cgi?id=136497

        Reviewed by Simon Fraser.

        Function is never called.

        No new tests because there is no behavior change.

        * rendering/TextPainter.cpp:
        (WebCore::TextPainter::paintTextInContext): Deleted.
        * rendering/TextPainter.h:

2014-09-03  Anders Carlsson  <andersca@apple.com>

        Don't use DEPRECATED_DEFINE_STATIC_LOCAL for mutexes
        https://bugs.webkit.org/show_bug.cgi?id=136510

        Reviewed by Andreas Kling.

        Mutexes are intended to be used from multiple threads, and DEPRECATED_DEFINE_STATIC_LOCAL is not thread safe.

        * bindings/objc/DOMInternal.mm:
        (wrapperCacheLock):
        (getDOMWrapper):
        (addDOMWrapper):
        (removeDOMWrapper):
        Use LazyNeverDestroyed + std::call_once, and switch the mutex over to an std::mutex.

        * dom/EventListenerMap.cpp:
        (WebCore::EventListenerMap::assertNoActiveIterators):
        (WebCore::EventListenerIterator::EventListenerIterator):
        (WebCore::EventListenerIterator::~EventListenerIterator):
        (WebCore::activeIteratorCountMutex):
        (WebCore::EventListenerMap::EventListenerMap): Deleted.
        * dom/EventListenerMap.h: