@@ -2387,7 +2387,6 @@ _wkExecutableWasLinkedOnOrBeforeSnowLeopard
 _wkGetAXTextMarkerRangeTypeID
 _wkGetAXTextMarkerTypeID
 _wkGetBytesFromAXTextMarker
-_wkGetExtensionsForMIMEType
 _wkGetFontInLanguageForCharacter
 _wkGetFontInLanguageForRange
 _wkGetGlyphTransformedAdvances
@@ -2396,7 +2395,6 @@ _wkGetHyphenationLocationBeforeIndex
 _wkGetNSEventKeyChar
 _wkGetNSURLResponseCalculatedExpiration
 _wkGetNSURLResponseMustRevalidate
-_wkGetPreferredExtensionForMIMEType
 _wkGetVerticalGlyphsForCharacters
 _wkGetWheelEventDeltas
 _wkHitTestMediaUIPart
